[package]
name = "powierza-coefficient-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.powierza-coefficient]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_powierza_coefficient"
path = "fuzz_targets/fuzz_powierza_coefficient.rs"
test = false
doc = false
